2005-04-22  Nathaniel Smith  <njs@codesourcery.com>

	* manifest.cc (build_restricted_manifest_map): Fixup after merge
	-- use file_exists instead of fs::exists.

2005-04-22  Derek Scherger  <derek@echologic.com>

	* manifest.{cc,hh} (build_restricted_manifest_map): keep and
	return a set of missing files rather than failing on first missing
	file
	* commands.cc (calculate_restricted_revision): handle set of
	missing files
	* revision.hh: update comment on the format of a revision
	* tests/t_status_missing.at: un-XFAIL and add a few tests
	
2005-04-22  Nathaniel Smith  <njs@codesourcery.com>

	* vocab.cc (verify(file_path), verify(local_path)): Normalize
	paths on the way in.
	* tests/t_normalized_filenames.at: Fix to match behavior
	eventually declared "correct".

2005-04-22  Nathaniel Smith  <njs@codesourcery.com>

	* vocab.{cc,hh}: Make verify functions public, make ATOMIC(foo)'s
	verify function a friend of foo, add ATOMIC_NOVERIFY macro, add
	long comment explaining all this.
	* vocab_terms.hh: Add _NOVERIFY to some types.

2005-04-22  Nathaniel Smith  <njs@codesourcery.com>

	* file_io.{cc,hh} (localized): Take file_path/local_path instead
	of string; expose in public interface.  Adjust rest of file to
	match.
	(walk_tree): Don't convert the (OS-supplied) current directory
	from UTF-8 to current locale.
	
	* transforms.{cc,hh} (charset_convert): Be more informative on
	error.
	(calculate_ident): Localize the filename, even on the fast-path.
	Also assert file exists and is not a directory, since Crypto++
	will happily hash directories.  (They are like empty files,
	apparently.)
	
	* manifest.cc (build_restricted_manifest_map): Use file_exists
	instead of fs::exists, to handle localized paths.
	* {win32,unix}/inodeprint.cc (inodeprint_file): Use localized
	filenames to stat.

	* tests/t_i18n_file.at: Rewrite to work right.

	* tests/t_normalized_filenames.at: New test.
	* testsuite.at: Add it.
	* vocab.cc (test_file_path_verification): MT/path is not a valid