@@ -547,6 +547,93 @@ utf8_to_ace(utf8 const & utf, ace & a)
   free(out);
 }
 
+// Lots of gunk to avoid charset conversion as much as possible.  Running
+// iconv over every element of every path in a 30,000 file manifest takes
+// multiple seconds, which then is a minimum bound on pretty much any
+// operation we do...
+static inline bool
+filesystem_is_utf8_impl()
+{
+  std::string lc_encoding = lowercase(system_charset());
+  return (lc_encoding == "utf-8"
+          || lc_encoding == "utf_8"
+          || lc_encoding == "utf8");
+}
+
+static inline bool
+filesystem_is_utf8()
+{
+  static bool it_is = filesystem_is_utf8_impl();
+  return it_is;
+}
+
+static inline bool
+filesystem_is_ascii_extension_impl()
+{
+  if (filesystem_is_utf8())
+    return true;
+  std::string lc_encoding = lowercase(system_charset());
+  // if your character set is identical to ascii in the lower 7 bits, then add
+  // it here for a speed boost.
+  return (lc_encoding.find("ascii") != std::string::npos
+          || lc_encoding.find("8859") != std::string::npos
+          || lc_encoding.find("ansi_x3.4") != std::string::npos);
+}
+
+static inline bool
+filesystem_is_ascii_extension()
+{
+  static bool it_is = filesystem_is_ascii_extension_impl();
+  return it_is;
+}
+
+inline static fs::path 
+localized_impl(string const & utf)
+{
+  if (filesystem_is_utf8())
+    return mkpath(utf);
+  if (filesystem_is_ascii_extension())
+    {
+      bool is_all_ascii = true;
+      // could speed this up by vectorization -- mask against 0x80808080,
+      // process a whole word at at time...
+      for (std::string::const_iterator i = utf.begin(); i != utf.end(); ++i)
+        if (0x80 & *i)
+          {
+            is_all_ascii = false;
+            break;
+          }
+      if (is_all_ascii)
+        return mkpath(utf);
+    }
+  fs::path tmp = mkpath(utf), ret;
+  for (fs::path::iterator i = tmp.begin(); i != tmp.end(); ++i)
+    {
+      external ext;
+      utf8_to_system(utf8(*i), ext);
+      ret /= mkpath(ext());
+    }
+  return ret;
+}
+
+fs::path 
+localized(file_path const & fp)
+{
+  return localized_impl(fp());
+}
+
+fs::path 
+localized(local_path const & lp)
+{
+  return localized_impl(lp());
+}
+
+fs::path
+localized(utf8 const & utf)
+{
+  return localized_impl(utf());
+}
+
 
 void 
 internalize_cert_name(utf8 const & utf, cert_name & c)
